MetadataAPIZip/unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abu Dhabi</fullName>
                </value>
                <value>
                    <fullName>Admiralty Islands</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Ajman</fullName>
                </value>
                <value>
                    <fullName>Al Ain</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Ascension Island</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_St_Line_2__c</fullName>
        <label>Billing St Line 2</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_St__c</fullName>
        <label>Billing St</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Province__c</fullName>
        <label>Billing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>GlobalExpense_Service_Profile</fullName>
        <active>true</active>
        <description>Contact profile for existing &apos;End Users&apos; of GlobalExpense.com service - Client contacts for Case Management</description>
        <label>GlobalExpense Service Profile</label>
    </recordTypes>
</CustomObject>